Fix Responsivness issue on small devices

--- a/style.css
+++ b/style.css
@@ -17,19 +17,20 @@ html {
   font-family: "Varela Round", -apple-system, BlinkMacSystemFont, "Segoe UI",
     Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   scroll-behavior: smooth;
+  width: 100%;
 }
 
 body {
   background-color: #333d47;
-  width: 100vw;
+  width: 100%;
   margin: 0px;
+  padding: 0px;
 }
 
 /*** Navbar ***/
 #header {
-  margin: auto;
   position: fixed;
-  width: 100%;
+  width: 100vw;
   height: 100px;
   background-color: var(--navbar-background-color);
   display: flex;
@@ -37,7 +38,7 @@ body {
   align-items: center;
   box-shadow: 0px 0px 10px var(--font-color);
   font-size: 1.2rem;
-  z-index: 10;
+  z-index: 1;
 }
 
 #header a {
@@ -47,10 +48,12 @@ body {
 
 #logo {
   margin-left: 30px;
-  width: 180px;
+  width: fit-content;
 }
 
 #options-container {
+  width: fit-content;
+  max-width: 200px;
   display: flex;
   justify-content: end;
   align-items: center;
@@ -124,7 +127,7 @@ main {
 
 section {
   min-height: 70vh;
-  /* width: 100%; */
+  width: 100%;
   margin: auto;
   padding: 50px;
   text-align: center;
@@ -206,19 +209,23 @@ section {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding: 50px 0px;
 }
 
 .projects-container {
-  margin: auto;
+  /* border: 3px solid black; */
+  /* margin: auto; */
   display: flex;
   justify-content: center;
+  width: 100%;
 }
 
+/* Projects */
 .project-div {
   margin: auto;
   transition: all 1s;
   padding: 20px;
-  width: 500px;
+  width: 400px;
   height: fit-content;
   display: flex;
   flex-direction: column;
@@ -228,7 +235,7 @@ section {
 }
 
 .project-div:hover {
-  box-shadow: 0px 0px 20px var(--font-color);
+  /* box-shadow: 0px 0px 20px var(--font-color); */
   transition: all 1s;
 }
 
@@ -250,7 +257,7 @@ section {
 
 .project-techs img {
   height: auto;
-  width: 50px;
+  width: 30px;
   filter: grayscale(100);
   transition: all 2s;
 }
@@ -290,10 +297,15 @@ section {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
 
 .contact-container {
-  margin: auto;
+  width: 430px;
+}
+
+#contact-list {
+  width: 430px;
 }
 
 #contact-list li {
